moviesLookup.css
body {
  background-color: #cad2c5;
  color: #2f3e46;
}

.sizeImg {
  object-fit: cover;
  width: 200px;
  height: 200px;
}

main {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding: 3rem;
  gap: 50px;
}

.cleaner {
  text-align: center;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 5px;
  text-decoration: underline;
  font-weight: bold;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#inputWrap {
  display: flex;
  flex-direction: column;
  gap: 13px;
  text-align: center;
  width: 150px;
}

input {
  padding: 4.5px;
  border: 2px thin #52796f;
  border-radius: 10px;
}

button {
  border: 2px solid;
  border-radius: 46px;
  background-color: #84a98c;
  color: #7f4f24;
  padding: 5px;
  font-weight: 600;
  padding-top: 6px;
  padding-bottom: 6px;
}

